// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > should render correctly as not required label 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  >
    <span
      class="_label_text_5091d6"
    >
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render correctly as required label 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  >
    <span
      class="_label_text_5091d6"
    >
      Test label
      <abbr
        title="required"
      >
        *
      </abbr>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render correctly without text 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  />
</DocumentFragment>
`;

exports[`Label > should render left icon 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  >
    <span
      class="_label_icon_5091d6 _icon_afc5be chop-icon__arrow-left _icon__medium_afc5be"
    />
    <span
      class="_label_text_5091d6"
    >
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render right icon 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  >
    <span
      class="_label_text_5091d6"
    >
      Test label
    </span>
    <span
      class="_label_icon_5091d6 _icon_afc5be chop-icon__arrow-down-right _icon__medium_afc5be"
    />
  </label>
</DocumentFragment>
`;
